--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,12 @@
     <artifactId>Conversor-Moneda</artifactId>
     <version>1.0-SNAPSHOT</version>
 <dependencies>
+    <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+    <dependency>
+        <groupId>com.google.code.gson</groupId>
+        <artifactId>gson</artifactId>
+        <version>2.10.1</version>
+    </dependency>
 
     <dependency>
         <groupId>org.projectlombok</groupId>
@@ -15,6 +21,7 @@
         <version>1.18.26</version>
         <scope>compile</scope>
     </dependency>
+
 </dependencies>
     <properties>
         <maven.compiler.source>20</maven.compiler.source>
